--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</script><script src="data/browsersupport.js"></script>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-	<meta name="format-detection" content="telephone=no"/>
+	<meta name="format-detection" content="telephone=yes"/>
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 	<meta name="msapplication-tap-highlight" content="no" />
@@ -30,7 +30,7 @@
 	<style>
 		body {
 			width: 100%;
-			height: 50%;
+			height: 100%;
 		}
 		
 		#preloader {
