--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		})();
 	</script><script src="data/browsersupport.js"></script>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes"/>
 	<meta name="format-detection" content="telephone=yes"/>
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
